<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manager_nav"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.thejas.fleetmanagementtask.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/vehiclesFragment"
        android:name="com.thejas.fleetmanagementtask.ui.vehicles.VehicleListFragment"
        android:label="@string/nav_vehicles" />

    <fragment
        android:id="@+id/driversFragment"
        android:name="com.thejas.fleetmanagementtask.ui.drivers.DriverListFragment"
        android:label="@string/nav_drivers" />

    <fragment
        android:id="@+id/tripsFragment"
        android:name="com.thejas.fleetmanagementtask.ui.trips.TripListFragment"
        android:label="@string/nav_trips" />

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.thejas.fleetmanagementtask.ui.more.MoreFragment"
        android:label="@string/nav_more" />
</navigation>
